unpackaged/main/default/objects/CMPL123QMS__Deviation__c/CMPL123QMS__Deviation__c.object-meta.xml
<CustomObject>
    <label>Deviation</label>
    <nameField>
        <displayFormat>DEV-{00000}</displayFormat>
        <label>Deviation No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deviations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>