unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Action_Completed__c.field-meta.xml
<CustomField>
        <fullName>Action_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Completed</label>
        <type>Checkbox</type>
    </CustomField>