unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Action_Required__c.field-meta.xml
<CustomField>
        <fullName>Action_Required__c</fullName>
        <label>Action Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>