unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Action_Type__c.field-meta.xml
<CustomField>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Action_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CAPA</fullName>
                </value>
                <value>
                    <fullName>Change Control</fullName>
                </value>
                <value>
                    <fullName>Document Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>