unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Department__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Department__c</fullName>
        <label>Department</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>