unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>