unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Equipment__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Equipment__c</fullName>
        <label>Equipment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>