unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Immediate_Actions__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Immediate_Actions__c</fullName>
        <label>Immediate Actions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>