unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Impact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>