unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Impact_Analysis__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Impact_Analysis__c</fullName>
        <label>Impact Analysis</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>