unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Location__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>