unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Place_Identified__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Place_Identified__c</fullName>
        <label>Place Identified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MFG Floor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>