unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Probability_Measure__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Probability_Measure__c</fullName>
        <label>Probability Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>