unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Quality_Approval_By__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Quality_Approval_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Approval By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Non_Conformances</relationshipName>
        <type>Lookup</type>
    </CustomField>