unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Related_CAPA__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Related_CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related CAPA</label>
        <referenceTo>CMPL123QMS__CAPA__c</referenceTo>
        <relationshipLabel>Non Conformances</relationshipLabel>
        <relationshipName>Dev_Non_Conformances</relationshipName>
        <type>Lookup</type>
    </CustomField>