unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Related_Supplier__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Related_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Non Conformances</relationshipLabel>
        <relationshipName>Sup_Non_Conformances</relationshipName>
        <type>Lookup</type>
    </CustomField>