unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Supplier_Contact_Person__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Supplier_Contact_Person__c</fullName>
        <label>Supplier Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>