unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/CMPL123QMS__Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OOS</fullName>
                </value>
                <value>
                    <fullName>OOT</fullName>
                </value>
                <value>
                    <fullName>Deviation</fullName>
                </value>
                <value>
                    <fullName>EHS/Facilities</fullName>
                </value>
                <value>
                    <fullName>Nonconformance</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>