unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Complete_Review_Reached__c.field-meta.xml
<CustomField>
        <fullName>Complete_Review_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Review Reached?</label>
        <type>Checkbox</type>
    </CustomField>