unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Contributing_Factors__c.field-meta.xml
<CustomField>
        <fullName>Contributing_Factors__c</fullName>
        <label>Contributing Factors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Improper Machine Maintenance</fullName>
                </value>
                <value>
                    <fullName>Operator Needed Additional Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>