unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Create_CAPA__c.field-meta.xml
<CustomField>
        <fullName>Create_CAPA__c</fullName>
        <label>Create CAPA?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Action_Required__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>