unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Deviancy_Level__c.field-meta.xml
<CustomField>
        <fullName>Deviancy_Level__c</fullName>
        <label>Deviancy Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Extreme, Bad, Not So Bad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>