unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Investigation_Completed__c.field-meta.xml
<CustomField>
        <fullName>Investigation_Completed__c</fullName>
        <label>Investigation Completed?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Investigation_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Investigation Not Required</fullName>
                </value>
                <value>
                    <fullName>Investigation Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>