unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Investigation_Summary_Rich_Text__c.field-meta.xml
<CustomField>
        <fullName>Investigation_Summary_Rich_Text__c</fullName>
        <label>Investigation Summary Rich Text</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>