unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Is_CAPA_Created__c.field-meta.xml
<CustomField>
        <fullName>Is_CAPA_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CAPA Created ?</label>
        <type>Checkbox</type>
    </CustomField>