unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/IS_Change_Control_Created__c.field-meta.xml
<CustomField>
        <fullName>IS_Change_Control_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IS Change Control Created ?</label>
        <type>Checkbox</type>
    </CustomField>