unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Location_Type__c.field-meta.xml
<CustomField>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Shop Floor / Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Clean Room</fullName>
                </value>
                <value>
                    <fullName>Office Space</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>