unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Product_2__c.field-meta.xml
<CustomField>
        <fullName>Product_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product 2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quality Events</relationshipLabel>
        <relationshipName>Quality_Events</relationshipName>
        <type>Lookup</type>
    </CustomField>