unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Product__c.field-meta.xml
<CustomField>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipLabel>Quality Events</relationshipLabel>
        <relationshipName>Quality_Events</relationshipName>
        <type>Lookup</type>
    </CustomField>