unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Product_Lot_Number_s__c.field-meta.xml
<CustomField>
        <fullName>Product_Lot_Number_s__c</fullName>
        <label>Product Lot Number (s)</label>
        <type>TextArea</type>
    </CustomField>