unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Investigation_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Man</fullName>
                </value>
                <value>
                    <fullName>Machine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>