unpackaged/main/default/objects/CMPL123QMS__Deviation__c/fields/Site__c.field-meta.xml
<CustomField>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Site 1</fullName>
                </value>
                <value>
                    <fullName>Site 2</fullName>
                </value>
                <value>
                    <fullName>Site 3</fullName>
                </value>
                <value>
                    <fullName>Site 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>