unpackaged/main/default/objects/CMPL123QMS__Deviation__c/validationRules/Action_Completed.validationRule-meta.xml
<ValidationRule>
        <fullName>Action_Completed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( CMPL123_WF_Action__c ) &amp;&amp;  CMPL123_WF_Action__c =="Submit Final Review - Action Complete" &amp;&amp;  Action_Completed__c == False</errorConditionFormula>
        <errorMessage>If Action Required? is Yes, Action Completed checkbox must be checked before performing the Submit Final Review – Action Complete action.</errorMessage>
    </ValidationRule>