unpackaged/main/default/objects/CMPL123QMS__Deviation__c/validationRules/Investigation_Completed_check.validationRule-meta.xml
<ValidationRule>
        <fullName>Investigation_Completed_check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Investigation_Required__c , "Yes") ,ISCHANGED( CMPL123_WF_Action__c ) &amp;&amp; CMPL123_WF_Action__c = "Complete Investigation - Quality Event" &amp;&amp; ISPICKVAL( Investigation_Completed__c , ""))</errorConditionFormula>
        <errorMessage>Please fill the field investigation completed? after completing investigation</errorMessage>
    </ValidationRule>