unpackaged/main/default/objects/CMPL123QMS__Deviation__c/validationRules/Investigation_required_is_Blank.validationRule-meta.xml
<ValidationRule>
        <fullName>Investigation_required_is_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( CMPL123_WF_Action__c ) &amp;&amp;CMPL123_WF_Action__c=="Complete Investigation - Quality Event"&amp;&amp; ISPICKVAL( Investigation_Required__c , "")</errorConditionFormula>
        <errorMessage>Investigation Required? field should not be blank to perform the action Complete Investigation - Quality Event</errorMessage>
    </ValidationRule>