unpackaged/main/default/objects/CMPL123QMS__Deviation__c/validationRules/Investigation_Required_Null.validationRule-meta.xml
<ValidationRule>
        <fullName>Investigation_Required_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Complete_Review_Reached__c = False, NOT((ISPICKVAL( Investigation_Required__c , ""))&amp;&amp; ISPICKVAL( Contributing_Factors__c , "")&amp;&amp; ISPICKVAL( Investigation_Completed__c , "") &amp;&amp;ISBLANK( CMPL123QMS__Investigation_Summary__c ) ))</errorConditionFormula>
        <errorMessage>Cannot select Investigation section fields before complete review</errorMessage>
    </ValidationRule>