unpackaged/main/default/objects/CMPL123QMS__Deviation__c/validationRules/No_action_Required.validationRule-meta.xml
<ValidationRule>
        <fullName>No_action_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( CMPL123_WF_Action__c ) &amp;&amp;  CMPL123_WF_Action__c =="Submit Final Review - No Action Required" &amp;&amp;   ISPICKVAL( Action_Required__c , "Yes")</errorConditionFormula>
        <errorMessage>If Action Required? is Yes, should not select “Submit Final Review - No Action Required” action.</errorMessage>
    </ValidationRule>