unpackaged/main/default/objects/CMPL123QMS__Deviation__c/listViews/CMPL123QMS__All.listView-meta.xml
<ListView>
        <fullName>CMPL123QMS__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123QMS__Type__c</columns>
        <columns>CMPL123QMS__Date_of_Occurence__c</columns>
        <columns>CMPL123QMS__Short_Description__c</columns>
        <columns>CMPL123QMS__Disposition_Description__c</columns>
        <columns>CMPL123QMS__Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>